search-view: protect against empty component date

This would cause crashes when searching.

https://bugzilla.gnome.org/show_bug.cgi?id=763166